--- a/sitewomen/women/templates/women/about.html
+++ b/sitewomen/women/templates/women/about.html
@@ -4,7 +4,7 @@
     <title>{{ title }}</title>
 </head>
 <body>
-<h1>О сайте {{ title }}</h1>
+<h1>{{ title }}</h1>
 <p>{{ menu }}</p>
 </body>
 </html>
