--- a/sitewomen/women/templates/women/index.html
+++ b/sitewomen/women/templates/women/index.html
@@ -5,7 +5,8 @@
 </head>
 <body>
 <h1>Главная страница</h1>
-<p>{{ menu }}</p>
+<p>{{ menu|join:" | " }}</p>
+<p>{{ float|add:"3" }}</p>
 <p>{{ title }} Это страница индекс</p>
 
 </body>
