--- a/sitewomen/women/templates/women/index.html
+++ b/sitewomen/women/templates/women/index.html
@@ -1,13 +1,17 @@
-<!DOCTYPE html>
-<head>
-    <meta charset="UTF-8">
-    <title>{{ title }}</title>
-</head>
-<body>
-<h1>Главная страница</h1>
-<p>{{ menu|join:" | " }}</p>
-<p>{{ float|add:"3" }}</p>
-<p>{{ title }} Это страница индекс</p>
+{% extends 'base.html' %}
 
-</body>
-</html>
+{% block content %}
+<ul class="list-articles">
+	{% for p in posts %}
+	{% if p.is_published %}
+			<li><h2>{{p.title}}</h2>
+    {% autoescape off %}
+	{{p.content|linebreaks|truncatewords:30}}
+    {% endautoescape %}
+			<div class="clear"></div>
+			<p class="link-read-post"><a href="{% url 'post' p.id %}">Читать пост</a></p>
+			</li>
+	{% endif %}
+	{% endfor %}
+</ul>
+{% endblock %}
