--- a/sitewomen/women/static/women/css/styles.css
+++ b/sitewomen/women/static/women/css/styles.css
@@ -1,10 +1,10 @@
 html, body {
-	font-family: 'Comic Sans MS';
+	font-family: 'Arial';
 	margin: 0;
 	padding: 0;
 	height: 100%;
 	width: 100%;
-	color: #036629;
+	color: #444;
 }
 
 a {
